[tool.poetry]
name = "showdown_warrior"
version = "0.1.0"
description = "ML-powered auto-battler"
authors = ["mathslug"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8^"
aiohttp = "3.6.2"
async-timeout = "3.0.1"
attrs = "19.3.0"
certifi = "2020.6.20"
chardet = "3.0.4"
idna = "2.10"
joblib = "0.16.0"
multidict = "4.7.6"
numpy = "1.19.1"
pandas = "1.1.0"
python-dateutil = "2.8.1"
pytz = "2020.1"
requests = "2.24.0"
scikit-learn = "0.23.1"
scipy = "1.5.2"
showdownpy = "0.1.5"
six = "1.15.0"
sklearn = "0.0"
threadpoolctl = "2.1.0"
urllib3 = "1.25.10"
websockets = "8.1"
yarl = "1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
